SGD8-2486: Fix label spacing + actions alignment

--- a/components/21-atoms/form-label/_form-label.scss
+++ b/components/21-atoms/form-label/_form-label.scss
@@ -3,5 +3,7 @@ label {
 
   .label-optional {
     @include optional-label();
+
+    margin: 0 0 3px 5px;
   }
 }
